...
            is LoginEvent.Connect -> viewModelScope.launch {
                _state.update { it.copy(error = false) }
                try {
                    val response = sessionManager.connect(LoginRequest(state.value.username, state.value.password), _state.value.saveLogin)
                    if (response.role != "Doctor") _state.update { it.copy(error = true) }
                    else _eventFlow.emit(UiEvent.ConnectionSuccess)
                    Log.i("CONNECTION", "Role: ${response.role} Token: ${response.accessToken}")
                } catch (exception: IllegalStateException) {
                    _state.update { it.copy(error = true) }
                }
            }
        }
    }
...
