...
}

}

object PrescriptionScreenTag {
    const val SCREEN = "prescription_screen"
    const val TITLE = "prescription_title"
    const val ADD_ENTRY = "prescription_add_entry"
    const val ENTRY = "prescription_entry"
    const val START_DATE = "prescription_entry_start"
    const val END_DATE = "prescription_entry_end"
}
